--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:seed": "node server/seed.js",
-    "download-images": "node src/assets/download-images.js"
+    "download-images": "node src/assets/download-images.js",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "react": "^18.2.0",
