fix: eliminar importaciones y variables no utilizadas para corregir errores de TypeScript en el despliegue
- Eliminar importación no utilizada 'Star' y variable 'reset' en ActivityForm.tsx
- Eliminar importación no utilizada 'X' en ConfirmDialog.tsx
- Eliminar importación no utilizada 'Calendar' en PerformanceChart.tsx
- Cambiar variable no utilizada 'step' por '_' en Booking.tsx
- Eliminar importaciones no utilizadas 'Link', 'Calendar', 'Clock' en Home.tsx

Esto resuelve los errores TS6133 que impedían el despliegue en Vercel

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "node server/seed.js",
     "download-images": "node src/assets/download-images.js",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run build",
+    "deploy": "npm run build && vercel --prod",
+    "deploy:preview": "npm run build && vercel"
   },
   "dependencies": {
     "react": "^18.2.0",
