--- a/package.json
+++ b/package.json
@@ -20,28 +20,36 @@
     "deploy:preview": "npm run build && vercel"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "@tanstack/react-query": "^5.8.4",
-    "axios": "^1.6.2",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.294.0",
-    "react-hook-form": "^7.48.2",
     "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
-    "date-fns": "^2.30.0",
-    "react-hot-toast": "^2.4.1",
-    "swiper": "^11.0.5",
-    "react-intersection-observer": "^9.5.3",
+    "@prisma/client": "^6.13.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-accordion": "^1.1.2",
+    "@tanstack/react-query": "^5.8.4",
+    "axios": "^1.6.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "framer-motion": "^10.16.4",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.294.0",
+    "pg": "^8.16.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.5.3",
+    "react-router-dom": "^6.20.1",
+    "swiper": "^11.0.5",
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
