--- a/vercel.json
+++ b/vercel.json
@@ -14,5 +14,8 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
