Render: prisma generate apunta a ../prisma/schema.prisma en postinstall

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "seed": "node seed.js",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate --schema ../prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
