feat: actualización de navegación, página FAQ y estilos de formulario de contacto

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "prestart": "prisma migrate deploy --schema ../prisma/schema.prisma || prisma db push --schema ../prisma/schema.prisma",
+    "start": "npm run prestart && node index.js",
     "dev": "nodemon index.js",
     "seed": "node seed.js",
     "postinstall": "prisma generate --schema ../prisma/schema.prisma",
