--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.1",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
